Make compatible with new parent pom.